[project]
name = "coba-nix"
version = "0.1.0"
description = "build python project using nix-shell and python package manager (PDM)"
authors = [
    {name = "EvanArnanda", email = "evanarnanda@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
